--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Polperse</title>
+  <title>Polperse's Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="css/nav.css">
@@ -17,17 +17,18 @@
   <script src="js/jquery.waypoints.min.js" type="text/javascript"></script>
   <script src="js/waypoints.js" type="text/javascript"></script>
   <script src="js/toggler.js" type="text/javascript"></script>
+  <script src="js/ityped.js" type="text/javascript"></script>
 </head>
 <body>
  <!--intro image -->
-  <section class="intro" id="intro">
+  <section class="intro">
     <div class="inner">
       <div class="content">
         <section class="os-animation" data-os-animation="bounceInUp" data-os-animation-delay="0s">
           <h1>Polperse</h1>
         </section>
         <section class="os-animation" data-os-animation="fadeIn" data-os-animation-delay="2s">
-          <a class="btn" id="btn-magic" href="#">Get to know me</a>
+          <a class="btn" href="#">Get to know me</a>
         </section>
       </div>
     </div>
@@ -35,31 +36,41 @@
 <!-- end intro image -->
 
 <!-- portfolio site -->
-  <div class="wrapper" id="wrapper">
-    <div class="row" id="header">
-      <div class="col-12">
-        <img class="logo" src="img/flexy-logo.png" alt="yes, this is the logo"/>
+  <div class="wrapper">
+    <div class="main-header">
+      <!-- <div class="row" id="header">
+        <div class="col-12">
+          <img class="logo" src="img/flexy-logo.png">
+        </div>
+      </div> -->
+      <div class="row">
+        <div class="col-12">
+          <nav role="navigation" id="nav">
+            <input class="trigger" type="checkbox"  id="mainNavButton">
+            <label for="mainNavButton" onclick>Menu</label>
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">About Me</a></li>
+              <li><a href="#">Projects</a></li>
+              <li><a href="#">Skills</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </nav>
+        </div>
       </div>
-    </div>
-    <div class="row">
-      <div class="col-12">
-        <nav role="navigation" id="nav">
-          <input class="trigger" type="checkbox"  id="mainNavButton">
-          <label for="mainNavButton" onclick>Menu</label>
-          <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About Me</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Specials</a></li>
-            <li><a href="#">Contact Me</a></li>
-          </ul>
-        </nav>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-12">
-        <img src="img/kite.png">
+      <div class="row">
+        <div class="col-12">
+          <h1 class="text-typing">Hi there!<br>I'm Polperse and this is what I love<br>
+            <span class="ityped-element"></span>
+          </h1>
+          <script type="text/javascript">
+            window.ityped.init(document.querySelector('.ityped-element'),{
+              strings : ['coding on NodeJS','UX designing with others','all about Raspberry Pi'],
+              loop : true,
+              showCursor : true
+            })
+          </script>
+        </div>
       </div>
     </div>
     <div class="row">
@@ -128,7 +139,7 @@
           <li><a href="#"><i class="fa fa-twitter"></i></a></li>
           <li><a href="#"><i class="fa fa-github"></i></a></li>
           <li><a href="#"><i class="fa fa-youtube"></i></a></li>
-          <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+          <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
         </ul>
       </div>
     </div>
@@ -141,3 +152,10 @@
   </div> <!-- end wrapper -->
 </body>
 </html>
+
+<!-- Paralax code
+<section class="parallax">
+  <div class="parallax-inner">
+  </div>
+</section>
+-->
