with firts iteration of parallax effect

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/flickity.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="css/styleIntro.css">
@@ -18,6 +19,7 @@
   <script src="js/waypoints.js" type="text/javascript"></script>
   <script src="js/toggler.js" type="text/javascript"></script>
   <script src="js/ityped.js" type="text/javascript"></script>
+  <script src="js/flickity.pkgd.js" type="text/javascript"></script>
 </head>
 <body>
  <!--intro image -->
@@ -60,12 +62,12 @@
       </div>
       <div class="row">
         <div class="col-12">
-          <h1 class="text-typing">Hi there!<br>I'm Polperse and this is what I love<br>
+          <h1 class="text-typing">Hi there!<br>I'm Polperse and I love:<br>
             <span class="ityped-element"></span>
           </h1>
           <script type="text/javascript">
             window.ityped.init(document.querySelector('.ityped-element'),{
-              strings : ['coding on NodeJS','UX designing with others','all about Raspberry Pi'],
+              strings : ['coding in NodeJS','UX design with the team','all about Raspberry Pi'],
               loop : true,
               showCursor : true
             })
@@ -73,16 +75,72 @@
         </div>
       </div>
     </div>
+
     <div class="row">
       <div class="col-12" id="welcome-text">
         <h2 class="dark">Welcome to Flexy!</h2>
       </div>
     </div>
-    <div class="row">
+
+    <div class="pimg1">
+      <div class="ptext">
+        <span class="border">
+          paralax text with shiny horses
+        </span>
+      </div>
+    </div>
+
+    <section class="section section-light">
+      <h2>section 1</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus dicta autem dolore voluptate aliquam eius. Id cum, perferendis porro eaque similique architecto quaerat! Dolorum numquam molestiae dolor ut, saepe omnis nisi optio laudantium, corporis ea eius, amet adipisci ab quidem in, repudiandae eveniet nesciunt. Odio necessitatibus saepe iusto, eligendi minus!
+      </p>
+    </section>
+
+    <div class="pimg2">
+      <div class="ptext">
+        <span class="border">
+          pimage 2 text
+        </span>
+      </div>
+    </div>
+
+    <section class="section section-dark">
+      <h2>section 2</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus dicta autem dolore voluptate aliquam eius. Id cum, perferendis porro eaque similique architecto quaerat! Dolorum numquam molestiae dolor ut, saepe omnis nisi optio laudantium, corporis ea eius, amet adipisci ab quidem in, repudiandae eveniet nesciunt. Odio necessitatibus saepe iusto, eligendi minus!
+      </p>
+    </section>
+
+    <div class="pimg3">
+      <div class="ptext">
+        <span class="border">
+          image 3 text
+        </span>
+      </div>
+    </div>
+
+    <section class="section section-light">
+      <h2>section 3</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus dicta autem dolore voluptate aliquam eius. Id cum, perferendis porro eaque similique architecto quaerat! Dolorum numquam molestiae dolor ut, saepe omnis nisi optio laudantium, corporis ea eius, amet adipisci ab quidem in, repudiandae eveniet nesciunt. Odio necessitatibus saepe iusto, eligendi minus!
+      </p>
+    </section>
+
+    <div class="pimg4">
+      <div class="ptext">
+        <span class="border">
+          image 4 text
+        </span>
+      </div>
+    </div>
+
+    <!-- <div class="row">
       <div class="col-12" id="blue-background">
         <img src="img/paper.png">
       </div>
     </div>
+
     <div class="row" id="orange-background">
       <div class="col-11">
         <h2>Get ready for take off!</h2>
@@ -91,6 +149,7 @@
         <img class="circle" src="img/take-off.png">
       </div>
     </div>
+
     <div class="row" id="green-background">
       <div class="col-10">
         <h2>Random Text 2!</h2>
@@ -99,6 +158,7 @@
         <img class="circle" src="img/orange-globe.png">
       </div>
     </div>
+
     <div class="row" id="lime-background">
       <div class="col-9">
         <h2 class="dark">Random Text 3!</h2>
@@ -107,6 +167,7 @@
         <img class="circle" src="img/waves.png">
       </div>
     </div>
+
     <div class="row" id="darkblue-background">
       <div class="col-8">
         <h2>Random Text 4!</h2>
@@ -115,6 +176,7 @@
         <img class="circle" src="img/plane.png">
       </div>
     </div>
+
     <div class="row" id="lightblue-background">
       <div class="col-7">
         <h2>Random Text 5!</h2>
@@ -122,12 +184,14 @@
       <div class="col-3">
         <img class="circle" src="img/paper-blue.png">
       </div>
-    </div>
+    </div> -->
+
     <div class="row" id="bottom-img">
       <div class="col-12">
         <img src="img/plane-background.png">
       </div>
     </div>
+
     <div class="row">
       <div class="col-12" id="follow-text">
         <h2>Follow me!</h2>
