parallax disabled for mobile

--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
 
     <div class="pimg1">
       <div class="ptext">
-        <span class="border">
-          paralax text with shiny horses
+        <span class="border-ptext">
+          Design Thinking
         </span>
       </div>
     </div>
 
-    <section class="section section-light">
+    <section class="section-parallax section-light">
       <h2>section 1</h2>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus dicta autem dolore voluptate aliquam eius. Id cum, perferendis porro eaque similique architecto quaerat! Dolorum numquam molestiae dolor ut, saepe omnis nisi optio laudantium, corporis ea eius, amet adipisci ab quidem in, repudiandae eveniet nesciunt. Odio necessitatibus saepe iusto, eligendi minus!
@@ -99,13 +99,13 @@
 
     <div class="pimg2">
       <div class="ptext">
-        <span class="border">
+        <span class="border-ptext">
           pimage 2 text
         </span>
       </div>
     </div>
 
-    <section class="section section-dark">
+    <section class="section-parallax section-dark">
       <h2>section 2</h2>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus dicta autem dolore voluptate aliquam eius. Id cum, perferendis porro eaque similique architecto quaerat! Dolorum numquam molestiae dolor ut, saepe omnis nisi optio laudantium, corporis ea eius, amet adipisci ab quidem in, repudiandae eveniet nesciunt. Odio necessitatibus saepe iusto, eligendi minus!
@@ -114,13 +114,13 @@
 
     <div class="pimg3">
       <div class="ptext">
-        <span class="border">
+        <span class="border-ptext">
           image 3 text
         </span>
       </div>
     </div>
 
-    <section class="section section-light">
+    <section class="section-parallax section-light">
       <h2>section 3</h2>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus dicta autem dolore voluptate aliquam eius. Id cum, perferendis porro eaque similique architecto quaerat! Dolorum numquam molestiae dolor ut, saepe omnis nisi optio laudantium, corporis ea eius, amet adipisci ab quidem in, repudiandae eveniet nesciunt. Odio necessitatibus saepe iusto, eligendi minus!
@@ -129,7 +129,7 @@
 
     <div class="pimg4">
       <div class="ptext">
-        <span class="border">
+        <span class="border-ptext">
           image 4 text
         </span>
       </div>
@@ -202,8 +202,9 @@
         <ul class="social">
           <li><a href="#"><i class="fa fa-twitter"></i></a></li>
           <li><a href="#"><i class="fa fa-github"></i></a></li>
-          <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+          <!-- <li><a href="#"><i class="fa fa-youtube"></i></a></li> -->
           <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+          <li><a href="#"><i class="fa fa-envelope"></i></a></li>
         </ul>
       </div>
     </div>
