added small image version

--- a/index.html
+++ b/index.html
@@ -128,11 +128,11 @@
     </section>
 
     <div class="pimg4">
-      <div class="ptext">
+      <!-- <div class="ptext">
         <span class="border-ptext">
           image 4 text
         </span>
-      </div>
+      </div> -->
     </div>
 
     <!-- <div class="row">
