to where i got on friday

--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
     </div>
 
     <div class="row">
-      <div class="col-12" id="welcome-text">
-        <h2 class="dark">Welcome to Flexy!</h2>
+      <div class="col-12" id="divider-text">
+        <h2 class="dark">Talents & skills</h2>
       </div>
     </div>
 
@@ -111,6 +111,20 @@
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus dicta autem dolore voluptate aliquam eius. Id cum, perferendis porro eaque similique architecto quaerat! Dolorum numquam molestiae dolor ut, saepe omnis nisi optio laudantium, corporis ea eius, amet adipisci ab quidem in, repudiandae eveniet nesciunt. Odio necessitatibus saepe iusto, eligendi minus!
       </p>
     </section>
+
+    <div class="pimg3">
+      <div class="ptext">
+        <span class="border-ptext">
+          image 3 text
+        </span>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-12" id="divider-text">
+        <h2 class="dark">Projects & Experience</h2>
+      </div>
+    </div>
 
     <div class="pimg3">
       <div class="ptext">
