--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/nav.css">
-  <link rel="stylesheet" href="css/flickity.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="css/styleIntro.css">
@@ -19,7 +18,6 @@
   <script src="js/waypoints.js" type="text/javascript"></script>
   <script src="js/toggler.js" type="text/javascript"></script>
   <script src="js/ityped.js" type="text/javascript"></script>
-  <script src="js/flickity.pkgd.js" type="text/javascript"></script>
 </head>
 <body>
  <!--intro image -->
@@ -62,12 +60,12 @@
       </div>
       <div class="row">
         <div class="col-12">
-          <h1 class="text-typing">Hi there!<br>I'm Polperse and I love:<br>
+          <h1 class="text-typing">Hi there!<br>I'm Pablo and I love to:<br>
             <span class="ityped-element"></span>
           </h1>
           <script type="text/javascript">
             window.ityped.init(document.querySelector('.ityped-element'),{
-              strings : ['coding in NodeJS','UX design with the team','all about Raspberry Pi'],
+              strings : ['code in NodeJS','UX design with the team','dig about Raspberry Pi'],
               loop : true,
               showCursor : true
             })
@@ -91,31 +89,57 @@
     </div>
 
     <section class="section-parallax section-light">
-      <h2>section 1</h2>
+      <!-- <h2>UX Design</h2> -->
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus dicta autem dolore voluptate aliquam eius. Id cum, perferendis porro eaque similique architecto quaerat! Dolorum numquam molestiae dolor ut, saepe omnis nisi optio laudantium, corporis ea eius, amet adipisci ab quidem in, repudiandae eveniet nesciunt. Odio necessitatibus saepe iusto, eligendi minus!
+        During hackweeks, together with the UX Team, we implemented design thinking techniques that were later applied to research our clients’ needs and identify enhancement opportunities.
+        <br> We used Empathy Maps & Voting during Design Studio sessions as a way to reach consensus among all participants.
       </p>
     </section>
 
     <div class="pimg2">
-      <div class="ptext">
-        <span class="border-ptext">
-          pimage 2 text
-        </span>
-      </div>
     </div>
 
     <section class="section-parallax section-dark">
-      <h2>section 2</h2>
+      <h2>Coding & Design</h2>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus dicta autem dolore voluptate aliquam eius. Id cum, perferendis porro eaque similique architecto quaerat! Dolorum numquam molestiae dolor ut, saepe omnis nisi optio laudantium, corporis ea eius, amet adipisci ab quidem in, repudiandae eveniet nesciunt. Odio necessitatibus saepe iusto, eligendi minus!
+        From time to time, a need would rise and resources would not be available to develop them. Rolled over my sleeves and got into it.
       </p>
     </section>
 
     <div class="pimg3">
       <div class="ptext">
         <span class="border-ptext">
-          image 3 text
+          SF Weather
+        </span>
+      </div>
+    </div>
+
+    <section class="section-parallax section-light">
+      <!-- <h2>UX Design</h2> -->
+      <p>
+        Consisted on a Twitter reply with an automatic generated image of the desired location's current weather forecast.
+      </p>
+    </section>
+
+    <div class="pimg4">
+      <div class="ptext">
+        <span class="border-ptext">
+          Next 4 Weeks
+        </span>
+      </div>
+    </div>
+
+    <section class="section-parallax section-light">
+      <!-- <h2>UX Design</h2> -->
+      <p>
+        A web application integrated with an internal google-sheet and Trello to quickly know creative services' overall time availability during the next four weeks. It displayed deadlines (skulls) as well.
+      </p>
+    </section>
+
+    <div class="pimg5">
+      <div class="ptext">
+        <span class="border-ptext">
+          Illustrator art for fun
         </span>
       </div>
     </div>
@@ -126,22 +150,22 @@
       </div>
     </div>
 
-    <div class="pimg3">
+    <div class="pimg7">
       <div class="ptext">
         <span class="border-ptext">
-          image 3 text
+          Argenclix
         </span>
       </div>
     </div>
 
     <section class="section-parallax section-light">
-      <h2>section 3</h2>
+      <!-- <h2>section 3</h2> -->
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus dicta autem dolore voluptate aliquam eius. Id cum, perferendis porro eaque similique architecto quaerat! Dolorum numquam molestiae dolor ut, saepe omnis nisi optio laudantium, corporis ea eius, amet adipisci ab quidem in, repudiandae eveniet nesciunt. Odio necessitatibus saepe iusto, eligendi minus!
+        Online community site based on Wordpress and PhpBB Forum. Made it for free. As an interesting technical point to highlight: Made it in a way that, should you register on either Wordpress or on PhpBB, your user will also exist in the other one and you will be logged on both.
       </p>
     </section>
 
-    <div class="pimg4">
+    <div class="pimg6">
       <!-- <div class="ptext">
         <span class="border-ptext">
           image 4 text
@@ -229,12 +253,6 @@
     </div>
 
   </div> <!-- end wrapper -->
+
 </body>
 </html>
-
-<!-- Paralax code
-<section class="parallax">
-  <div class="parallax-inner">
-  </div>
-</section>
--->
