--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       </div>
     </div>
 
-    <section class="section-parallax section-light">
+    <section class="section-parallax section-dark">
       <!-- <h2>UX Design</h2> -->
       <p>
         A web application integrated with an internal google-sheet and Trello to quickly know creative services' overall time availability during the next four weeks. It displayed deadlines (skulls) as well.
